--- a/app/views/cart_items/_index.html.erb
+++ b/app/views/cart_items/_index.html.erb
@@ -73,7 +73,7 @@
         </svg>
         <h2 class="mt-4 text-2xl font-semibold text-gray-700">Your shopping basket is empty</h2>
         <div class="mt-6">
-          <%= link_to "Start Shopping", products_path, class: "btn btn-primary" %>
+          <%= link_to "Start Shopping", products_path, class: "btn btn-primary", data: { turbo: false } %>
         </div>
       </div>
     <% end %>
