Add Geograph font

--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -1,2 +1,5 @@
+@import "../stylesheets/fonts.css";
+@import "../stylesheets/tailwind-custom.css";
 @import "../stylesheets/application.tailwind.css";
 @plugin "daisyui";
+@import "../stylesheets/custom-styles.css";
