--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-full bg-base-100 text-base-content" data-theme="light">
+<html class="font-geograph h-full bg-base-100 text-base-content" data-theme="light">
   <head>
     <title><%= content_for(:title) || "Afida Shop" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
