--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -3,7 +3,7 @@
     <div class="col-span-full md:col-span-2 flex items-center space-x-4">
       <%= link_to product_path(cart_item.product) do %>
         <% if cart_item.product.image.attached? %>
-          <%= image_tag cart_item.product.image.variant(resize_to_limit: [100, 100]), class: "w-20 h-20 object-cover rounded-md shadow", alt: cart_item.product.name %>
+          <%= image_tag vite_asset_path("images/product-placeholder.png"), class: "w-20 h-20 object-cover rounded-md shadow", alt: cart_item.product.name %>
         <% else %>
           <div class="w-20 h-20 bg-gray-200 rounded-md shadow flex items-center justify-center text-gray-500 text-xs">No Image</div>
         <% end %>
